<resources>
    <string name="app_name">Go4Food</string>
    <string name="app_name2">Go 4 Food</string>
    <string name="client">Client</string>
    <string name="Driver">Driver</string>
    <string name="Restaurant">Restaurant</string>
    <string name="youAre">You are....</string>
    <string name="register">Register</string>
    <string name="signIn">Sign in</string>
    <string name="welcom">Welcom to Go 4 Food :)</string>
    <string name="title_activity_client_login">ClientLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username not valid</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Client -->
    <string name="iforget">I forget my password ?</string>

    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email_address">Email Adress</string>
    <string name="password">Password</string>
    <string name="numTel">Phone Number</string>
    <string name="find">Find Your Food</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="go">GO</string>
    <!-- Driver -->
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="typeV">Type of Vehicule</string>
    <string name="deliveryC">Recive delivery commandes</string>

    <!-- Resto -->
    <string name="resto_name">Restaurant Name</string>
    <string name="cont">Continue</string>
    <string name="address">Adress</string>
    <!-- required client  -->
    <string name="fName_required">First name is Required</string>
    <string name="lName_required">Last name is Required</string>
    <string name="paswd_required">password is Required</string>
    <string name="age_required">Age is Required</string>
    <string name="paswd_lenght">Min password length should be 6 characters !</string>
    <string name="email_adress_required">Email Adress is Required</string>
    <string name="email_not_valid">Please provide a valide email</string>
    <string name="phone_required">Phone number is Required</string>

    <string name="cl_registered">Client has been registered successfuly</string>
    <string name="cl_not_registered">Failed to register ! Try again</string>
    <string name="choosesYourWeeklySc">Chooses your weekly schedule</string>
    <string name="error_toast_msg">Please make sur to fill all requiered fields</string>

    <!-- required Resto   -->
    <string name="nameResto_required">the name is Required</string>
    <string name="adress_required">Adress location is Required</string>
    <string name="city_required">City is Required</string>

    <string name="field_required">This field is Required</string>

    <!-- Weekly days -->
    <string name="day">Day</string>
    <string name="opHour">Openning hour</string>
    <string name="clHour">Clossing hour</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thrusday">Thrusday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save">Save</string>

    <!-- Fragment -->
    <string name="pleaseSelect">Please Select....</string>
    <string name="menu">Menu</string>
    <string name="oneProduct">One product</string>
    <string name="next">Next</string>

    <string name="addNoreCommands">Add more commands</string>
    <string name="newCommand">New Command</string>

    <string name="failed">please try again</string>
    <string name="tryAgain">Try Again</string>

    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="variations">Variations</string>
    <string name="photo">Photo</string>
    <string name="listOfItems">List of items</string>
    <string name="item1">item 1</string>
    <string name="item2">item 2</string>
    <string name="totalPrice">Total price</string>
    <string name="description">Description</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="add_items">Add New Item</string>

    <!-- Resto - Ietms Setting account -->
    <string-array name="setting_item_name">
        <item>Account</item>
        <item>Position</item>
        <item>Evaluation</item>
        <item>Alertes</item>
        <item>Schedual</item>
        <item>Notifications</item>
        <item>History</item>
    </string-array>

    <string-array name="description_setting_item_name">
        <item>Information</item>
        <item>Manage your adress</item>
        <item>see your evaluation</item>
        <item>new notifications</item>
        <item>Planning</item>
        <item>Notifications</item>
        <item>Program</item>
    </string-array>

    <!--Array list for spinner -->
    <string-array name="spinner_type_of_vehicule">
        <item>Scoter</item>
        <item>Car</item>
        <item>Bicycle</item>
        <item>Motocycle</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="number_required">Number is required</string>
    <string name="day_required">Expiration day is required</string>
    <string name="year_required">Expiration year is required</string>
    <string name="validation_number_required">Validation number is required</string>

</resources>